# typer-test

./: pyproject.toml
tests/: test_typer_test.py
typer_test/: main.py
