[tool.poetry]
name = "typer_test"
version = "0.1.0"
description = ""
authors = ["firasrashidi <firasrachidi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
black = "^20.8b1"
flake8 = "^3.8.4"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
